Fix by Thiago Macieira <thiago@kde.org> for ingored signature type selections.

Marc, this seems correct to me. How about
resolveSigningKeysFroEncryption and resolveEncryptionKeys? Do they have
the same problem?

BUG: 99089
CCMAIL: marc@kdab.net

svn path=/trunk/KDE/kdepim/; revision=429061